--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,8 @@
 {{page-title "MemoryTest"}}
 
-{{! The following component displays Ember's default welcome message. }}
-<WelcomePage />
-{{! Feel free to remove this! }}
+Start a Memory profile and toggle each button, rememboring to hide the demo before proceeding to the next. <br>
+
+<ComponentDemo />
+{{! <ReactivityDemo /> }}
 
 {{outlet}}
